--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -13,7 +13,7 @@
     </div>
     <div class="w-[640px] flex-none">
         <div class="flex justify-center items-center flex-col gap-4 min-h-screen">
-            <p class="pt-14 slate-grey">Vous avez deja compte <a class="link link-accent" href="/login">Login</a> </p>
+            <p class="pt-14 slate-grey">You already have an account <a class="link link-accent" href="/login">Login</a> </p>
             <div class="my-auto flex flex-col gap-4 items-center">
                 <label class="input input-bordered flex items-center gap-2">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="h-4 w-4 opacity-70">
