add component home page + styling

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="w-[640px] flex-none">
         <div class="flex justify-center items-center flex-col gap-4 min-h-screen">
-            <p class="pt-14 slate-grey">New on ManagePass ? <a class="link link-accent" href="/register">Sign Up</a> </p>
+            <p class="pt-14 slate-grey">New on ManagePass ? <a class="link link-accent" routerLink="/register">Sign Up</a> </p>
             <div class="my-auto flex flex-col gap-4 items-center">
             <label class="input input-bordered flex items-center gap-2 min-w-[350px]">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="h-4 w-4 opacity-70">
