--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<body class="leading-normal tracking-normal text-gray-900" style="font-family: 'Source Sans Pro', sans-serif;">
+<div class="leading-normal tracking-normal text-gray-900" style="font-family: 'Source Sans Pro', sans-serif;">
     <div class="h-screen pb-14 bg-right bg-cover" style="background-image:url('bg.svg');">
         <!--Nav-->
         <div class="w-full container mx-auto p-6">
@@ -41,7 +41,5 @@
             </div>
 
         </div>
-
-
     </div>
-</body>
+</div>
